syntax = "proto3";

option go_package = "p2p-overlay/pkg/grpc";

service Peers {
    rpc RegisterPeer (Peer) returns (RegisterPeerResponse);
    rpc UnregisterPeer (UnregisterPeerRequest) returns (UnregisterPeerResponse);
}

message RegisterPeerResponse {
    bool success = 1;
}

message UnregisterPeerRequest {
    string public_key = 2;
}

message UnregisterPeerResponse {
    bool success = 1;
}

enum UDPNetworkType {
    udp = 0;
    udp4 = 1;
    udp6 = 2;
}

message Peer {
    string public_key = 1;
    repeated string allowed_ips = 2;
    UDPNetworkType endpoint_udp_type = 3;
    string endpoint = 4;
    string preshared_key = 5;
    uint32 persistent_keepalive_interval_seconds = 6;
    uint64 protocol_version = 7;
    int64 receive_bytes = 8;
    int64 transmit_bytes = 9;
    int64 last_handshake_time_unix_sec = 10;
}